--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -2,8 +2,8 @@
 #database.username=wegxlfzjjgxaxy
 #database.password=SSQyKKE_e93kiUCR-ehzMcKCxZ
 
-database.url=jdbc:postgresql://localhost:5432/topjava8
-database.username=postgres
+database.url=jdbc:postgresql://localhost:5432/topjava
+database.username=user
 database.password=admin
 
 database.init=true
