--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -7,4 +7,22 @@ users.title=User list
 
 meals.title=Meals list
 
+meal.cancel=Cancel
 common.select=Select
+meal.create=Create meal
+meal.edit=Edit meal
+meal.save=Save
+meal.datetime=Date/Time:
+meal.description=Description:
+meal.calories=Calories:
+meals.fromDate=From date:
+meals.toDate=To date:
+meals.fromTime=From time:
+meals.toTime=To time:
+meals.filter=Filter
+meals.addMeal=Add meal
+meals.date=Date
+meals.description=Description
+meals.calories=Calories
+meals.update=Update
+meals.delete=Delete
