--- a/config/app.properties
+++ b/config/app.properties
@@ -43,6 +43,7 @@ common.search=Search
 exception.user.duplicateEmail=User with this email already exists
 exception.user.modificationRestriction=Admin/User modification is forbidden
 exception.meal.duplicateDateTime=You already have meal with this date/time
+exception.duplicate_email=User with this email already present in application.
 
 NotEmpty={0} must not be empty
 NotBlank={0} must not be empty
