--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,46 +1,54 @@
 app.title=Calories management
-app.home=Home
-app.footer=Project <a href\="https\://github.com/JavaOPs/topjava" target\=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a> application
-app.login=Login
-app.logout=Logout
+app.footer=Project <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a> application
+app.enter=Enter as
 app.profile=profile
-app.register=Register
+app.register=Registration
 app.registered=You are registered. Please Sign in.
 
-users.title=User list
-users.edit=Edit user
-users.add=Add user
-users.name=Name
-users.email=Email
-users.roles=Roles
-users.active=Active
-users.registered=Registered
-users.password=Password
-users.caloriesPerDay=Calories per day
+user.title=Users
+user.edit=Edit user
+user.add=Add user
+user.name=Name
+user.email=Email
+user.roles=Roles
+user.active=Active
+user.registered=Registered
+user.password=Password
+user.caloriesPerDay=Daily calorie limit
 
-meals.title=Meals list
-meals.edit=Edit meal
-meals.add=Add meal
-meals.filter=Filter
-meals.startDate=From date
-meals.endDate=To date
-meals.startTime=From time
-meals.endTime=To time
-meals.description=Description
-meals.dateTime=DateTime
-meals.calories=Calories
+userTo.name=Name
+userTo.email=Email
+userTo.password=Password
+userTo.caloriesPerDay=Daily calorie limit
 
-common.select=Select
-common.delete=Delete
-common.update=Update
-common.save=Save
+meal.title=Meals
+meal.edit=Edit meal
+meal.add=Add meal
+meal.startDate=From date
+meal.endDate=To date
+meal.startTime=From time
+meal.endTime=To time
+meal.description=Description
+meal.dateTime=Date/Time
+meal.calories=Calories
+
+common.add=Add
+common.deleted=Record deleted
+common.saved=Record saved
+common.enabled=Record enabled
+common.disabled=Record disabled
+common.errorStatus=Error status
 common.search=Search
 
-common.deleted=Deleted
-common.saved=Saved
-common.enabled=Enabled
-common.disabled=Disabled
-common.failed=Failed
-common.add=Add
-
+exception.user.duplicateEmail=User with this email already exists
+exception.user.modificationRestriction=Admin/User modification is forbidden
+exception.meal.duplicateDateTime=You already have meal with this date/time
 exception.duplicate_email=User with this email already present in application.
+
+NotEmpty={0} must not be empty
+NotBlank={0} must not be empty
+NotNull={0} must not be empty
+Email= Invalid format of {0}
+Range={0} must be between {2} and {1}
+Length={0} length must be between {2} and {1}
+SafeHtml={0} may have unsafe html content
