--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -44,6 +44,7 @@ exception.user.duplicateEmail=User with this email already exists
 exception.user.modificationRestriction=Admin/User modification is forbidden
 exception.meal.duplicateDateTime=You already have meal with this date/time
 exception.duplicate_email=User with this email already present in application.
+exception.common.notFound=Not found entity with {0}
 
 NotEmpty={0} must not be empty
 NotBlank={0} must not be empty
